[gd_scene load_steps=14 format=2]

[ext_resource path="res://Boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tiles/blocker/dead.png" type="Texture" id=2]
[ext_resource path="res://Blocker.gd" type="Script" id=3]
[ext_resource path="res://Assets/Tiles/blocker/idle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Tiles/blocker/moving_up.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tiles/blocker/moving_right.png" type="Texture" id=6]
[ext_resource path="res://Assets/Tiles/blocker/moving_down.png" type="Texture" id=7]
[ext_resource path="res://Assets/Tiles/blocker/moving_left.png" type="Texture" id=8]
[ext_resource path="res://Assets/Tiles/blocker/impact.png" type="Texture" id=9]
[ext_resource path="res://Assets/Tiles/blocker/prepare.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "moving_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "moving_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "impact",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "moving_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "moving_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "prepare",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 21 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21, 21 )

[node name="Blocker" instance=ExtResource( 1 )]
collision_mask = 15
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]
position = Vector2( -1, -1 )
scale = Vector2( 2.47059, 2.47059 )
frames = SubResource( 1 )
animation = "prepare"

[node name="Collision" type="CollisionShape2D" parent="." index="2"]
shape = SubResource( 2 )

[node name="CooldownTimer" type="Timer" parent="." index="3"]
wait_time = 2.0
one_shot = true

[node name="AimingTimer" type="Timer" parent="." index="4"]
wait_time = 3.0
one_shot = true

[node name="RightCast" type="RayCast2D" parent="." index="6"]
cast_to = Vector2( 23, 0 )
collision_mask = 4
collide_with_areas = true

[node name="LeftCast" type="RayCast2D" parent="." index="7"]
cast_to = Vector2( -23, 0 )
collision_mask = 4
collide_with_areas = true

[node name="UpCast" type="RayCast2D" parent="." index="8"]
cast_to = Vector2( 0, -23 )
collision_mask = 4
collide_with_areas = true

[node name="DownCast" type="RayCast2D" parent="." index="9"]
cast_to = Vector2( 0, 23 )
collision_mask = 4
collide_with_areas = true

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitCollision" index="0"]
shape = SubResource( 3 )
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="AimingTimer" to="." method="_on_AimingTimer_timeout"]
[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="area_entered" from="HitCollision" to="." method="_on_HitCollision_area_entered"]
